2010-06-12  Dmitry Titov  <dimich@chromium.org>

        Not reviewed, update Chromium expected result following r61071.

        * platform/chromium/fast/dom/prototype-inheritance-expected.txt:

2010-06-12  Andreas Kling  <andreas.kling@nokia.com>

        Reviewed by Darin Adler.

        Window object should have CanvasGradient and CanvasPattern
        https://bugs.webkit.org/show_bug.cgi?id=40394

        Unskipped 2 tests that are now working properly.

        * canvas/philip/tests/2d.gradient.object.return-expected.txt:
        * canvas/philip/tests/2d.pattern.basic.type-expected.txt:
        * fast/dom/Window/window-properties-expected.txt:
        * fast/dom/Window/window-property-descriptors-expected.txt:
        * fast/dom/dom-constructors-expected.txt:
        * fast/dom/prototype-inheritance-2-expected.txt:
        * fast/dom/prototype-inheritance-expected.txt:
        * fast/js/global-constructors-expected.txt:
        * platform/gtk/fast/dom/Window/window-properties-expected.txt:
        * platform/gtk/fast/dom/Window/window-property-descriptors-expected.txt:
        * platform/gtk/fast/dom/prototype-inheritance-expected.txt:
        * platform/gtk/fast/js/global-constructors-expected.txt:
        * platform/mac/Skipped:
        * platform/qt/Skipped:
        * platform/qt/fast/dom/Window/window-properties-expected.txt:
        * platform/qt/fast/dom/Window/window-property-descriptors-expected.txt:
        * platform/qt/fast/dom/prototype-inheritance-expected.txt:
        * platform/qt/fast/js/global-constructors-expected.txt:

2010-06-12  Dan Bernstein  <mitz@apple.com>

        Reviewed by Oliver Hunt.

        <rdar://problem/8025267> REGRESSION (Safari 4-TOT): Crash when a frame’s resize handler removes the frame
        https://bugs.webkit.org/show_bug.cgi?id=40534

        * fast/replaced/frame-removed-during-resize-expected.txt: Added.
        * fast/replaced/frame-removed-during-resize.html: Added.
