@@ -124,6 +124,7 @@ public:
     static bool isTargetItem(const QWebHistoryItem& historyItem);
     static QString historyItemTarget(const QWebHistoryItem& historyItem);
 
+    static bool shouldClose(QWebFrame* frame);
 };
 
 #endif
